Fix hard to read font for certain platforms
* Noticed issue on W10 - Chrome 73, Screensize 24in

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ header {
 header > h1,
 h2 {
   font-family: 'Raleway', sans-serif;
+  font-weight: 200;
   letter-spacing: 0.2em;
 }
 
@@ -103,6 +104,8 @@ footer {
 
 footer a {
   color: black;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 footer a:hover {
